--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- logo with navigation + address-->
     <header id="top">
       <nav>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -29,39 +29,41 @@
         <button type="button">Order Service</button>
       </section>
       <section id="benefits">
+        <!-- заголовок h2 потрібно приховати -->
+        <h2>Benefits</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving..
             </p>
           </li>
         </ul>
       </section>
       <section id="team">
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
@@ -102,7 +104,7 @@
       </section>
     </main>
     <footer id="bottom">
-      <a href="#">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
